Changes in format-check.yml workflow

--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -24,10 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Prettier check
-        run: npx prettier --check .
-
-      - name: Run Prettier fix (if needed)
+      - name: Run Prettier fix
         run: |
           npx prettier --write .
           git config --global user.name 'github-actions'
