--- a/terminal_server/package.json
+++ b/terminal_server/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "scripts": {
+    "start": "node server.js",
+    "rebuild": "npx node-gyp rebuild"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
